# RPA-Automation-Week-4

./: .pre-commit-config.yaml  CLEANUP_COMPLETION_REPORT.md  Dockerfile  INDUSTRY_STANDARD_SUMMARY.md  Makefile  PROJECT_STATUS_REPORT.md  README.md  STEEL_TRANSFORMATION_SUMMARY.md  VERIFICATION_REPORT.md  automation_optimized_profile.prof  automation_profile.prof  docker-compose.yml  main.py  main_optimized.py  main_steel.py  performance_analysis.py  presentation_slides.md  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  setup.py  test_steel_automation.py
.github/workflows/: ci-cd.yml
config/: email_templates.yaml  logging.yaml  settings.yaml
data/: generate_steel_data.py  reservations.csv  steel_orders.csv
data/output/: automation_summary_report.csv  automation_summary_report.json
docs/: troubleshooting.md
flight_automation/: __init__.py
flight_automation/core/: __init__.py  data_processor.py
flight_automation/services/: __init__.py  email_service.py  reporting.py
flight_automation/utils/: __init__.py  logger.py
flight_automation_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: automation_profile.prof
reports/: detailed_report_20250803_085840.csv  detailed_report_20250803_094255.csv  detailed_report_20250803_094711.csv  detailed_report_20250803_212019.csv  detailed_report_20250803_212101.csv  detailed_report_20250805_205737.csv  flight_automation_report.csv  flight_automation_report.json  optimized_automation_report.csv  optimized_automation_report.json  performance_analysis_20250803_094711.json  steel_automation_summary_20250805_212924.json  steel_automation_summary_20250805_214629.json  steel_automation_summary_20250806_133138.json  steel_customer_analytics_20250805_212924.json  steel_customer_analytics_20250805_214629.json  steel_customer_analytics_20250806_133138.json  steel_order_summary_20250805_212924.csv  steel_order_summary_20250805_212924.json  steel_order_summary_20250805_214629.csv  steel_order_summary_20250805_214629.json  steel_order_summary_20250806_133138.csv  steel_order_summary_20250806_133138.json  steel_production_metrics_20250805_212924.json  steel_production_metrics_20250805_214629.json  steel_production_metrics_20250806_133138.json  steel_quality_analysis_20250805_212924.json  steel_quality_analysis_20250805_214629.json  steel_quality_analysis_20250806_133138.json  steel_system_performance_20250805_212924.json  steel_system_performance_20250805_214629.json  steel_system_performance_20250806_133138.json  validation_report_20250805_212814.json
scripts/: generate_data.py  run_automation.py
src/: __init__.py  data_processor.py  email_service.py  validation.py
steel_automation/: __init__.py
steel_automation/core/: __init__.py  data_processor.py  validation.py
steel_automation/services/: __init__.py  email_service.py  reporting.py
steel_automation/utils/: __init__.py  logger.py  metrics.py
tests/: conftest.py  test_data_processor.py
